--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -13,7 +13,7 @@ ext {
     siteUrl = 'https://github.com/St4B/mvp'
     gitUrl = 'https://github.com/St4B/mvp.git'
 
-    libraryVersion = '0.2-beta'
+    libraryVersion = '0.7-beta'
 
     developerId = 'St4B'
     developerName = 'Vaios Tsitsonis'
@@ -26,7 +26,7 @@ ext {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 15
@@ -51,9 +51,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'android.arch.lifecycle:runtime:1.0.0'
-    compile 'android.arch.lifecycle:extensions:1.0.0-beta2'
+
+    api 'android.arch.lifecycle:extensions:1.0.0'
+    api 'com.android.support:appcompat-v7:26.1.0'
 
     testCompile 'junit:junit:4.12'
 }
