--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -52,7 +52,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    api 'com.android.support:appcompat-v7:26.1.0'
+    provided 'com.android.support:appcompat-v7:+'
 
     testCompile 'junit:junit:4.12'
 }
