--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -44,6 +44,10 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
