--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -56,8 +56,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    provided 'com.android.support:appcompat-v7:+'
-    provided 'com.google.code.gson:gson:2.+'
+    compileOnly 'com.android.support:appcompat-v7:+'
+    compileOnly 'com.google.code.gson:gson:2.+'
 
     testCompile 'junit:junit:4.12'
 }
