--- a/mvp/src/main/AndroidManifest.xml
+++ b/mvp/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quadible.mvp">
+          package="com.quadible.mvp">
 
     <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
+                 android:supportsRtl="true">
+
+        <service android:name="com.quadible.mvp.OnExitDetectionService"
+                 android:stopWithTask="false"/>
 
     </application>
 
