--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@
 /build
 /captures
 .externalNativeBuild
+.idea/caches/build_file_checksums.ser
+.idea/codeStyles/Project.xml
+.idea/runConfigurations.xml
+.idea/gradle.xml
+.idea/vcs.xml
+.idea/misc.xml
+.idea/modules.xml
