--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -56,8 +56,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compileOnly 'com.android.support:appcompat-v7:+'
+    compileOnly 'com.android.support:appcompat-v7:27.1.1'
     compileOnly 'com.google.code.gson:gson:2.+'
+
+    implementation project(':mvp-annotation')
 
     testImplementation 'junit:junit:4.12'
 }
