--- a/mvp-annotation/build.gradle
+++ b/mvp-annotation/build.gradle
@@ -1,8 +1,36 @@
 apply plugin: 'java-library'
 
+ext {
+    bintrayRepo = 'quadible'
+    bintrayName = 'mvp-annotation'
+
+    publishedGroupId = 'com.quadible'
+    libraryName = 'mvp-annotation'
+    artifact = 'mvp-annotation'
+
+    libraryDescription = 'Annotation for mvp library'
+
+    siteUrl = 'https://github.com/St4B/mvp'
+    gitUrl = 'https://github.com/St4B/mvp.git'
+
+    libraryVersion = '1.0'
+
+    developerId = 'St4B'
+    developerName = 'Vaios Tsitsonis'
+    developerEmail = 'v.tsitsonis@quadible.co.uk'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
+
+// Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
