--- a/mvp-processor/build.gradle
+++ b/mvp-processor/build.gradle
@@ -1,11 +1,67 @@
 apply plugin: 'java-library'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
+
+ext {
+    bintrayRepo = 'quadible'
+    bintrayName = 'mvp-processor'
+
+    publishedGroupId = 'com.quadible'
+    libraryName = 'mvp-processor'
+    artifact = 'mvp-processor'
+
+    libraryDescription = 'An annotation processor for mvp library'
+
+    siteUrl = 'https://github.com/St4B/mvp'
+    gitUrl = 'https://github.com/St4B/mvp.git'
+
+    libraryVersion = '1.1'
+
+    developerId = 'St4B'
+    developerName = 'Vaios Tsitsonis'
+    developerEmail = 'v.tsitsonis@quadible.co.uk'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':mvp-annotation')
-    implementation 'com.squareup:javapoet:1.11.1'
+    api project(':mvp-annotation')
+    api 'com.squareup:javapoet:1.11.1'
 }
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
+
+// Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
+publishing {
+    publications {
+        Production(MavenPublication) {
+            artifact("$buildDir/outputs/aar/" + artifact + "-release.aar")
+            groupId publishedGroupId
+            artifactId artifact
+            version libraryVersion
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+
+                // Iterate over the implementation dependencies (we don't want the test ones), adding a <dependency> node for each
+                configurations.implementation.allDependencies.each {
+                    // Ensure dependencies such as fileTree are not included in the pom.
+                    if (it.name != 'unspecified') {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                    }
+                }
+            }
+        }
+    }
+}
