--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -66,7 +66,9 @@ dependencies {
     api project(':mvp-annotation')
 
     testImplementation 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.2-eap13'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.2-eap13'
 }
 
 //Apply at the end!
