--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -16,7 +16,7 @@ ext {
     siteUrl = 'https://github.com/St4B/mvp'
     gitUrl = 'https://github.com/St4B/mvp.git'
 
-    libraryVersion = '1.0'
+    libraryVersion = '1.1-Kotlin-Coroutines-SNAPSHOT'
 
     developerId = 'St4B'
     developerName = 'Vaios Tsitsonis'
