--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,32 @@
 language: android
+jdk: oraclejdk8
+sudo: false
+os: linux
+
 android:
   components:
-    - build-tools-28.0.3
-    - $ANDROID_TARGET
-    - sys-img-armeabi-v7a-$ANDROID_TARGET
-    - extra-android-support
-    - extra-android-m2repository
+    - tools
+    - platform-tools
+    - build-tools-27.0.3
+    - android-27
     - extra-google-m2repository
-env:
-  matrix:
-    - ANDROID_TARGET=android-28  ANDROID_ABI=armeabi-v7a
-before_script:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+    - extra-android-m2repository
+    - extra-android-support
+
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    - sys-img-armeabi-v7a-android-16
+    - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-25
+
+licenses:
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+    - 'android-sdk-preview-license-.+'
+
+before_install:
+  - chmod +x gradlew
+
+script:
+  ./gradlew clean build
