Exclude gradle plugins that needed only for uploading in jcenter

--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -69,8 +69,10 @@ dependencies {
 }
 
 //Apply at the end!
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+if (project.rootProject.file('local.properties').exists()) {
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+}
 
 publishing {
     publications {
