--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,12 @@ licenses:
     - 'google-gdk-license-.+'
     - 'android-sdk-preview-license-.+'
 
+cache:
+  directories:
+    - "$HOME/.gradle/caches/"
+    - "$HOME/.gradle/wrapper/"
+    - "$HOME/.android/build-cache"
+
 before_install:
   - chmod +x gradlew
 
