test if dashes cause travis validation error

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ before_install:
   - chmod +x gradlew
 
 script:
-  -./gradlew clean build
-  -./gradlew connectedCheck
+  ./gradlew clean build
+  ./gradlew connectedCheck
