--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,4 @@ before_install:
 - yes | sdkmanager "platforms;android-28"
 
 script:
-  ./gradlew clean build --stacktrace
-#  ./gradlew connectedCheck
+  ./gradlew clean build --stacktrace | ./gradlew connectedCheck
