--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
     - tools
     - platform-tools
     - android-28
+    - build-tools-28.0.2
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-android-support
