--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ before_install:
 - yes | sdkmanager "platforms;android-28"
 
 script:
-  ./gradlew clean build --stacktrace
+  ./gradlew clean build --debug
 #   | ./gradlew connectedCheck
