--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':mvp', ':mvp-annotation', ':mvp-processor'
+include ':app', ':mvp', ':mvp-annotation', ':mvp-processor', ':mvp-integration'
