--- a/mvp-integration/build.gradle
+++ b/mvp-integration/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
 
 
 
     defaultConfig {
         applicationId "quadible.com.mvp.integration"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -16,11 +16,19 @@ android {
 
     }
 
+    testOptions {
+        unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
 
 }
@@ -28,15 +36,21 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(path: ':mvp')
 
-    testImplementation ("org.robolectric:robolectric:3.8") {
+    testImplementation("org.robolectric:robolectric:3.8") {
         exclude group: 'xmlpull'
-        exclude group: 'org.apache.maven'
     }
+    testImplementation "com.android.support.test:runner:1.0.2"
+
+    testImplementation 'com.google.code.gson:gson:2.8.5'
+    testImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+    testAnnotationProcessor project(path: ':mvp-processor')
+    testImplementation project(path: ':mvp')
+
 }
