--- a/mvp-integration/build.gradle
+++ b/mvp-integration/build.gradle
@@ -2,9 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-
-
-
+    
     defaultConfig {
         applicationId "quadible.com.mvp.integration"
         minSdkVersion 15
@@ -12,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -36,19 +34,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    testImplementation("org.robolectric:robolectric:3.8") {
+    testImplementation("org.robolectric:robolectric:4.1") {
         exclude group: 'xmlpull'
     }
-    testImplementation "com.android.support.test:runner:1.0.2"
+    testImplementation "androidx.test:runner:1.1.1"
+    testImplementation 'androidx.test:core:1.1.0'
 
     testImplementation 'com.google.code.gson:gson:2.8.5'
-    testImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    testImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     testAnnotationProcessor project(path: ':mvp-processor')
     testImplementation project(path: ':mvp')
