--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -15,7 +15,7 @@ ext {
     siteUrl = 'https://github.com/St4B/mvp'
     gitUrl = 'https://github.com/St4B/mvp.git'
 
-    libraryVersion = '1.0'
+    libraryVersion = '1.1Lambda'
 
     developerId = 'St4B'
     developerName = 'Vaios Tsitsonis'
